#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([scanflash], [0.1], [malvineous@shikadi.net])
AM_INIT_AUTOMAKE([scanflash], [0.1])
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_LANG(C++)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
AC_PROG_LIBTOOL

AM_SILENT_RULES([yes])

AC_OUTPUT(Makefile src/Makefile)
