#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([scanflash], [0.1], [malvineous@shikadi.net], [], [http://www.shikadi.net/scanflash])
AM_INIT_AUTOMAKE([foreign dist-bzip2 no-dist-gzip])
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_LANG(C++)
AC_PROG_CXX
AC_PROG_LIBTOOL

AM_SILENT_RULES([yes])

AC_OUTPUT(Makefile src/Makefile)
